--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,23 @@
+*{
+    background-color: lightgrey; 
+}
+
+.navbar-brand {
+    color:black; 
+}
+
+.navbar-brand:hover {
+    color:black; 
+}
+
+.navbar-nav a {
+    color: black; 
+}
+
+.navbar-nav a:hover {
+    color:grey; 
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
