--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -44,10 +44,12 @@ body,html {
     margin-left: 350px;  
     margin-right: auto; 
 }
+
 .about-text { 
     color: #3369e8;  
     margin-left: 300px;
     margin-right: 300px;  
+    text-align: center; 
 }
 
 #about-carousel { 
@@ -68,12 +70,25 @@ body,html {
     height: 400px; 
     background-color: #ebeef2; 
 }
+
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
 }
 
 #greeting-container {
-  margin-top: 20px;
+    margin-top: 20px;
 }
+
+footer {
+    position: static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5em;
+    background-color: black;
+    color: white;
+    text-align: center;
+ }
+
