--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -66,8 +66,17 @@ body,html {
     margin-bottom: -200px; 
 }
 
+#about-btn {
+    text-align: center;
+}
+
+#more-container {
+    margin-top: 10px;
+    text-align: center; 
+}
+
 #projects {
-    height: 200%; 
+    height: 1350px; 
     background-color: #ebeef2; 
 }
 
@@ -85,16 +94,6 @@ body,html {
     margin-right: 300px;  
 }
 
-#content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 650px;
-}
-
-#greeting-container {
-    margin-top: 20px;
-}
-
 footer {
     position: static;
     left: 0;
@@ -105,4 +104,3 @@ footer {
     color: white;
     text-align: center;
  }
-
