--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -150,6 +150,24 @@ body,html {
   }
 }
 
+#contact {
+    background-color: black;  
+    height: 500px;  
+    padding-top: 20px; 
+}
+
+#contact-title {
+    color: #eeb211; 
+    text-align: center; 
+    margin-top: 50px; 
+}
+
+#buttons { 
+    margin-top: 100px; 
+    text-align: center;
+    align-content: center; 
+}
+
 footer {
     position: static;
     left: 0;
@@ -159,4 +177,4 @@ footer {
     background-color: black;
     color: white;
     text-align: center;
- }
+}
